--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==05:28:07=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==05:29:40=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1862.66</p>
+                <p id="net-worth">1860.91</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-404.75</p>
+                <p id="unrealized-pl-value">-406.50</p>
             </div>
         </div>
     </header>
@@ -112,10 +112,10 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-
+BuyLimit: 17403.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-145.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-140.0</h2>
 
         </div>
         <div class="column">
