--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==05:53:02=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==05:54:34=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1884.91</p>
+                <p id="net-worth">1882.16</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-382.50</p>
+                <p id="unrealized-pl-value">-385.25</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-115.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-116.25=====0.09</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-268.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-270.5</h2>
 
         </div>
         <div class="column">
