--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==06:29:07=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==06:30:42=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1870.66</p>
+                <p id="net-worth">1869.91</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-396.75</p>
+                <p id="unrealized-pl-value">-397.50</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 BuyLimit: 17386.0
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-153.75=====0.05</h2>
+            <h2 id="column2-title">MESM24==P/L:-155.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-245.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-241.5</h2>
 
         </div>
         <div class="column">
