--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==07:02:22=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==07:03:57=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1841.66</p>
+                <p id="net-worth">1847.41</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-425.75</p>
+                <p id="unrealized-pl-value">-420.00</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 BuyLimit: 17386.0
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-181.25=====0.05</h2>
+            <h2 id="column2-title">MESM24==P/L:-180.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-239.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-239.5</h2>
 
         </div>
         <div class="column">
