--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==07:07:09=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==09:29:41=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1846.41</p>
+                <p id="net-worth">1731.04</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-421.00</p>
+                <p id="unrealized-pl-value">-445.00</p>
             </div>
         </div>
     </header>
@@ -111,32 +111,38 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24</h2>
-BuyLimit: 17386.0
+            <h2 id="column1-title">M2KM24</h2>
+--
+9 24.75
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-181.25=====0.05</h2>
+            <h2 id="column2-title">M2KM24</h2>
+--
+9 24.75
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MESM24</h2>
+M2KM24
+--
+        </div>
+        <div class="column">
+            <h2 id="column4-title">M2KM24</h2>
+--
+9 24.75
+        </div>
+        <div class="column">
+            <h2 id="column5-title">M2KM24</h2>
+--
+9 24.75
+        </div>
+        <div class="column">
+            <h2 id="column6-title">MESM24</h2>
+M2KM24
+--
+        </div>
+        <div class="column">
+            <h2 id="column7-title">MESM24==P/L:-438.75=====5</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-241.0</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
-            <p id="stocks-content-4d">{{stocks-content-4}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
-            <p id="stocks-content-6d">{{stocks-content-6}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
-            <p id="stocks-content-7d">{{stocks-content-7}}</p>
         </div>
         <div class="column">
             <h2 id="column8-title">{{COLUMN8_TITLE}}</h2>
