--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:32:38=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:40:03=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1746.04</p>
+                <p id="net-worth">1773.54</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-430.00</p>
+                <p id="unrealized-pl-value">-402.50</p>
             </div>
         </div>
     </header>
@@ -111,12 +111,12 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MESM24==P/L:-431.25=====5</h2>
--418.75 87.8645 Open -6.50
+            <h2 id="column1-title">MESM24==P/L:-402.5</h2>
+-386.25 89.4895 Open -19.00
         </div>
         <div class="column">
             <h2 id="column2-title">M2KM24</h2>
--418.75 87.8645 Open -6.50
+-386.25 89.4895 Open -19.00
         </div>
         <div class="column">
             <h2 id="column3-title">{{COLUMN3_TITLE}}</h2>
