--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==11:16:24=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==11:17:40=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1842.29</p>
+                <p id="net-worth">1837.29</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-333.75</p>
+                <p id="unrealized-pl-value">-338.75</p>
             </div>
         </div>
     </header>
@@ -111,7 +111,7 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MESM24==P/L:-328.75=====1</h2>
+            <h2 id="column1-title">MESM24==P/L:-335.0</h2>
 SellLimit: 2011.5
         </div>
         <div class="column">
