--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==12:40:44=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==12:41:58=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -111,12 +111,12 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MESM24==P/L:-288.75=====1</h2>
-
+            <h2 id="column1-title">MESM24==P/L:-285.0</h2>
+SellLimit: 2011.5
         </div>
         <div class="column">
             <h2 id="column2-title">M2KM24</h2>
-
+SellLimit: 2011.5
         </div>
         <div class="column">
             <h2 id="column3-title">{{COLUMN3_TITLE}}</h2>
