--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==12:51:05=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==12:52:19=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1889.79</p>
+                <p id="net-worth">1876.04</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-286.25</p>
+                <p id="unrealized-pl-value">-300.00</p>
             </div>
         </div>
     </header>
@@ -111,16 +111,17 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MESM24==P/L:-286.25=====1</h2>
-
+            <h2 id="column1-title">MESM24==P/L:-301.25=====1</h2>
+BuyLimit: 1998.7
         </div>
         <div class="column">
             <h2 id="column2-title">M2KM24</h2>
-
+BuyLimit: 1998.7
+SellLimit: 1999.2
         </div>
         <div class="column">
-            <h2 id="column3-title">{{COLUMN3_TITLE}}</h2>
-            <p id="stocks-content-3d">{{stocks-content-3}}</p>
+            <h2 id="column3-title">M2KM24==P/L:1.0</h2>
+SellLimit: 1999.2
         </div>
         <div class="column">
             <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
