--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==12:56:45=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==12:58:10=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1870.04</p>
+                <p id="net-worth">1857.54</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">-0.50</p>
+                <p id="realized-pl-value">+6.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-306.00</p>
+                <p id="unrealized-pl-value">-325.00</p>
             </div>
         </div>
     </header>
@@ -111,12 +111,12 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MESM24==P/L:-308.75=====1</h2>
-SellLimit: 1999.2
+            <h2 id="column1-title">MESM24==P/L:-323.75=====1</h2>
+
         </div>
         <div class="column">
-            <h2 id="column2-title">M2KM24==P/L:4.5</h2>
-SellLimit: 1999.2
+            <h2 id="column2-title">M2KM24</h2>
+
         </div>
         <div class="column">
             <h2 id="column3-title">{{COLUMN3_TITLE}}</h2>
